--- a/src/style.css
+++ b/src/style.css
@@ -1,29 +1,200 @@
 :root{
-    --green-Paw: #93D152;
-    --blue-Paw: #02BDCB;
-    --yellow-Paw: #FFED4F;
-    --orange-Paw: #FCC116;
+  --green-Paw: #93D152;
+  --blue-Paw: #02BDCB;
+  --yellow-Paw: #FFED4F;
+  --orange-Paw: #FCC116;
+  --darkorange-Paw: #F9B900; /*Pendiente */
+  --gray-Paw: #ABA9A9;
+  --lightgray-Paw: #D9D9D9;
 }
 
 body{
-    margin: 0;
+  margin: 0;
+  font-family: "Poppins";
 }
 
 .flex{
-    display: flex;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
-.background{
-    background-image: url("./pictures/background.png");
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    width: 100%;
-    height: 100%;
-    opacity: 0.1;
- }
+.root-background{
+  height: 100vh; 
+  position: relative;
+}
 
- .root{
-    flex-direction: column;
- }
+.root-background::before{
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  opacity: 0.05;
+  background-image: url("pictures/background.png");
+  background-attachment: fixed; 
+  background-size: cover;
+  background-position: center;
+}
+
+.view-login, .view-signup, .view-wall{
+  position: relative;
+}
+
+.root-background:first-child{
+  opacity:initial;
+}
+
+.logo-img{
+  height: 100px;
+  width: 100px;
+}
+
+.logo-text{
+  font-weight: 700;
+  color: var(--orange-Paw);
+  font-size: 1rem;
+  margin: 0.6rem 0rem;
+}
+
+.input-paw, .post-editableText{
+  width: 15rem;
+  height: 2.2rem;
+  border-radius: 50px;
+  border: 2px solid var(--gray-Paw);
+  margin: 0.6rem 0rem;   
+  padding-left: 0.8rem;
+  font-family: "Poppins";
+}
+
+.input-paw::placeholder, .post-editableText::placeholder{
+  font-family: "Poppins";
+  color: var(--lightgray-Paw);
+  font-size: 16px;
+}
+
+.input-paw:focus, .post-editableText:focus{
+  outline-color: var(--blue-Paw);
+}
+
+.login-btnLogin, .signup-btnSignup{
+  margin: 0.6rem 0rem;
+}
+
+a{
+  text-decoration: none;
+  color: white;
+}
+
+.btn-paw{
+  border-radius: 50px;
+  border: none;
+  background-color: var(--orange-Paw);
+  width: 11rem;
+  height: 2.2rem;
+  
+  font-family: "Poppins";
+  font-size: 16px;
+}
+
+.btn-paw:hover{
+  background-color: var(--darkorange-Paw)
+}
+
+.login-signup-btn, .btn-exit{
+  color: var(--blue-Paw);
+}
+
+.login-signup-btn:hover{
+  border-bottom: 2px solid #02BDCB;
+}
+
+.login-google-img{
+  height: 40px;
+  width: 40px;
+}
+
+.login-google-img:hover, .post-btnpost:hover, .published-posts-likes-img:hover{
+  transform: scale(1.2);
+  cursor: pointer;
+}
+
+.view-wall{
+  height: 100%;
+  width: 100%;
+}
+
+.flex-wall{
+  display: flex;
+  flex-direction: row;
+}
+
+.header-wall{
+  justify-content: space-between;
+  align-items: center;
+  margin: 2.25rem;
+}
+
+.logo-wall{
+  gap: 10px;
+}
+
+.logo-img-wall, .post-btnpost, .published-posts-likes-img{
+  height: 30px;
+  width: 30px;
+  align-self: center;
+}
+
+.user-img{
+  height: 6rem;
+  width: 6rem;
+}
+
+.user-text{
+  font-weight: 600;
+  font-size: 1.25rem;
+  margin: 1rem;
+}
+
+.post-editableText, .published-posts-box{
+  width: 70%;
+  height: 30%;
+  border-radius: 20px;
+  padding: 1rem;
+  font-size: 1rem;
+}
+
+.post-btnpost{
+  align-self: flex-end;
+  margin-right: 15%;
+}
+
+.published-posts-box{
+  /* Por mientras */
+  width: 270px;
+  height: 100px;
+  background-color: var(--gray-Paw);
+  margin: 15px;
+}
+
+.published-posts-likes{
+  align-self: flex-start;
+  justify-self: baseline;
+  margin-left: 15%;
+}
+
+.published-posts-likes-number{
+  margin: 0rem 0.5rem;
+}
+
+
+
+
+
+
+
+
+
