--- a/src/style.css
+++ b/src/style.css
@@ -207,9 +207,9 @@ a{
   text-align: center;
 }
 
-.container-post-name{
+.container-head-post{
   width: 76%;
-  height: 30px;
+  height: 100px;
   background-color: var(--green-Paw);
   color: white;
     /* justify-self: center; */
@@ -218,6 +218,27 @@ a{
   border-top-right-radius: 20px;
   margin-top: 30px;
   padding-top: 7px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  text-align: left;
+}
+
+.container-name-date{
+  flex: 2 1 auto;
+  padding-left: 30px;
+}
+
+.container-post-name{
+  margin: 10px;
+  font-weight: 700;
+  width: 70%;
+}
+
+.container-post-date{
+  font-size: 0.75rem;
+  margin: 10px;
 }
 
 .containerLikes{
