--- a/src/style.css
+++ b/src/style.css
@@ -327,6 +327,38 @@ a{
   cursor: pointer;
 }
 
+/* Estilo para modal de confirmación */
+.modal-conf{
+  border: none;
+  border-radius: 20px;
+  font-size: 1.15rem;
+}
+
+.modal-conf::backdrop{
+  background: rgba(217, 217, 217, 0.6);
+}
+
+.btn-modalConf-yes, .btn-modalConf-no {
+  font-family: 'Poppins';
+  border: none;
+  border-radius: 10px;
+  color: white;
+  background-color: var(--lightblue-Paw);
+  margin: 0px 10px;
+  cursor: pointer;
+  font-size: 1rem;
+  padding: 3px 10px;
+}
+
+.btn-modalConf-yes:focus{
+  outline-color: var(--blue-Paw);
+}
+
+.btn-modalConf-no{
+  background-color: var(--gray-Paw);
+}
+
+
 /* Estilo para menú desplegable */
 
 .three-dots{
